common-applications/control/mail/mailcore.yaml
# StatefulSet for mail core service
---
kind: StatefulSet
apiVersion: apps/v1beta1
metadata:
  name: mailman-core
  namespace: mail
  labels:
    app: mail-suit-service
    component: mail-core-service
spec:
  serviceName: mail-suit-service
  replicas: 1
  selector:
    matchLabels:
      app: mail-suit-service
      component: mail-core-service
  template:
    metadata:
      labels:
        app: mail-suit-service
        component: mail-core-service
    spec:
      containers:
        - name: mailman-core
          image: mindspore/mail-core:v0.1.1
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /opt/mailman/
              name: mailman-core-volume
          command:
            - /bin/sh
            - -c
            - |
              export DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@mailman-database-0.mail-suit-service.mail.svc.cluster.local/mailmandb
              sed -i "s/charset: us-ascii/charset: utf-8/g" /usr/lib/python3.6/site-packages/mailman/config/schema.cfg;
              exec docker-entrypoint.sh master --force
      #NOTE: Empty dir can't be used in a production dir. Please upgrade it before using.
      volumes:
        - name: mailman-core-volume
          persistentVolumeClaim:
            claimName: config-vol
