common-applications/control/mail/mtaservice.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mailman-exim4-service
  namespace: mail
  annotations:
    kubernetes.io/elb.class: union
    kubernetes.io/elb.id: 78db0c9c-17eb-497a-afa5-7101a5ba0e4f
    kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
spec:
  #We need set this into 'Local' since we need get the client IP for relay excluding.
  externalTrafficPolicy: Local
  loadBalancerIP: 94.74.106.235
  ports:
  - port: 25
    name: exim4-port
    targetPort: 25
    protocol: TCP
  selector:
    component: mail-exim4-service
  type: LoadBalancer

# StatefulSet for exim4 services
---
kind: StatefulSet
apiVersion: apps/v1beta1
metadata:
  name: mailman-exim4
  namespace: mail
  labels:
    app: mail-suit-service
    component: mail-exim4-service
spec:
  serviceName: mail-suit-service
  replicas: 1
  selector:
    matchLabels:
      app: mail-suit-service
      component: mail-exim4-service
  template:
    metadata:
      labels:
        app: mail-suit-service
        component: mail-exim4-service
    spec:
      containers:
        - name: mailman-exim4
          image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/mailman-exim4:e6d42d2b5d5c3f0f0fee051796a32e4e371d361f
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /etc/exim4/conf.d/main/25_mm3_macros
              name: mailman-exim4-configmap-volume
              subPath: 25_mm3_macros
            - mountPath: /etc/exim4/conf.d/main/01_exim4-config_listmacrosdefs
              name: mailman-exim4-configmap-volume
              subPath: 01_exim4-config_listmacrosdefs
            - mountPath: /etc/exim4/conf.d/auth/30_exim4-config_examples
              name: mailman-exim4-configmap-volume
              subPath: 30_exim4-config_examples
            - mountPath: /etc/exim4/conf.d/main/00_local_macros
              name: mailman-exim4-configmap-volume
              subPath: 00_local_macros
            - mountPath: /etc/exim4/conf.d/transport/55_mm3_transport
              name: mailman-exim4-configmap-volume
              subPath: 55_mm3_transport
            - mountPath: /etc/exim4/conf.d/router/455_mm3_router
              name: mailman-exim4-configmap-volume
              subPath: 455_mm3_router
            - mountPath: /etc/exim4/update-exim4.conf.conf
              name: mailman-exim4-configmap-volume
              subPath: update-exim4-conf.conf
              # This file path also used in command option that used as a exim4 log path
            - mountPath: /opt/mailman/
              name: mailman-core-data
            - name: mailman-secrets
              mountPath: /etc/exim4/passwd.ro
              subPath: exim4_credential
            - name: mailman-cert-secrets
              mountPath: /etc/exim4/osinfra.exim.crt.ro
              subPath: server_crt
            - name: mailman-cert-secrets
              mountPath: /etc/exim4/osinfra.exim.key.ro
              subPath: server_key
            - name: mailman-cert-secrets-foropenhetu
              mountPath: /etc/exim4/openhetuengine.exim.crt.ro
              subPath: server_crt
            - name: mailman-cert-secrets-foropenhetu
              mountPath: /etc/exim4/openhetuengine.exim.key.ro
              subPath: server_key
            - name: mailman-secrets
              mountPath: /etc/exim4/dkim/dkim.key.ro
              subPath: dkim_key
          # NOTE: since we added new configuration files we need reload exim4 and start up
          # 1. password used for exim4 login
          # 2. exim4.crt used for host certificate verification
          # 3. exim4.key used for message encryption
          command:
            - /bin/sh
            - -c
            - |
              [...]
      #NOTE: Empty dir can't be used in a production dir. Please upgrade it before using.
      volumes:
        - name: mailman-exim4-configmap-volume
          configMap:
            name: mailman-exim4-configmap
        - name: mailman-core-data
          persistentVolumeClaim:
            claimName: config-vol
        - name: mailman-secrets
          secret:
            secretName: mailman-secrets
        - name: mailman-cert-secrets
          secret:
            secretName: mailman-cert-secrets
