common-applications/control/mail/webservice.yaml
# Config web service
---
apiVersion: v1
kind: Service
metadata:
  name: mailman-web-service
  namespace: mail
spec:
  ports:
  - port: 80
    name: website-port-http
    targetPort: 80
    protocol: TCP
  selector:
    component: mail-web-service
  type: ClusterIP

# Deployment for mail web service
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mailman-web
  namespace: mail
  labels:
    component: mail-web-service
    app: mail-suit-service
spec:
  replicas: 2
  selector:
    matchLabels:
      component: mail-web-service
      app: mail-suit-service
  template:
    metadata:
      labels:
        component: mail-web-service
        app: mail-suit-service
    spec:
      hostname: mailman-web
      containers:
        - name: mailman-web
          # We modified the mail-web image to add static folder.
          image: maxking/mailman-web:0.3.5
          imagePullPolicy: "Always"
          volumeMounts:
            - mountPath: /opt/mailman-web-config
              name: mailman-web-configmap-volume
            - mountPath: /opt/mailman-web-data
              name: mailman-web-volume
            - mountPath: /usr/lib/python3.6/site-packages/postorius/templates/postorius/lists/summary.html
              name: mailman-webpage-hack-volume
              subPath: summary.html
            - mountPath: /opt/mailman-web/uwsgi.ini
              name: mailman-web-configmap-volume
              subPath: uwsgi.ini
          ports:
            - containerPort: 80
          command:
            - /bin/sh
            - -c
            - |
              export DATABASE_URL=mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@192.168.1.3:3306/mailman
              cp /opt/mailman-web-config/settings_local.py /opt/mailman-web-data;
              #disable sign up route for mailman web                                                                                                                                                                 │
              sed -i "s/path(\"signup/#path(\"signup/g" /usr/lib/python3.6/site-packages/allauth/account/urls.py;
              #disable sigup page for mailman web
              cp /opt/mailman-web-config/base.html /opt/mailman-web-config/settings_local.py
              exec docker-entrypoint.sh uwsgi --ini /opt/mailman-web/uwsgi.ini;
        - name: nginx-web
          image: nginx:1.19.2
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: mailman-nginx-configmap-volume
              subPath: nginx.conf
            - mountPath: /etc/nginx/conf.d/default.conf
              name: mailman-nginx-configmap-volume
              subPath: default.conf
            - mountPath: /opt/mailman-web-data
              name: mailman-web-volume
      #NOTE: Empty dir can't be used in a production dir. Please upgrade it before using.
      volumes:
        - name: mailman-web-volume
          emptyDir: {}
        - name: mailman-web-configmap-volume
          configMap:
            name: mailman-web-configmap
        - name: mailman-cert-secrets
          secret:
            secretName: mailman-cert-secrets
        - name: mailman-webpage-hack-volume
          configMap:
            name: mailman-webpage-hack
        - name: mailman-nginx-configmap-volume
          configMap:
            name: mailman-nginx-configmap
---
